spacing fixes to profile.css 320/ header.css/ footer.css

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -24,5 +24,6 @@
     font-size: 14px;
     line-height: 16.94px;
     max-width: 282px;
+    padding: 48px 0 36px;
   }
 }
