--- a/blocks/header.css
+++ b/blocks/header.css
@@ -10,7 +10,7 @@
 .header__image {
   width: 173px;
   height: 33px;
-  padding: 45px 20px 41px;
+  padding: 45px 0px 41px;
 }
 
 @media screen and (max-width: 480px) {
@@ -22,6 +22,6 @@
   .header__image {
     width: 126px;
     height: 24px;
-    padding: 27px 0px 28px 13px;
+    padding: 28px 0px 32px 27px;
   }
 }
